# ProfitOfExile

./: .air.collector.toml  .air.toml  .dockerignore  .editorconfig  .env  .env.example  .env.local  .gitignore  ARCHITECTURE.md  BACKBONE.md  CLAUDE.md  Dockerfile  Dockerfile.desktop  Dockerfile.dev  Dockerfile.frontend  EPICS.md  LICENSE  Makefile  README.md  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  package.json  webpack.config.js
.claude/agents/: backend-test.md  backend.md  data-analyst.md  desktop.md  e2e-test.md  fixturer.md  frontend.md  general.md  market-researcher.md  strategy-evaluator.md
.claude/commands/: release.md
.github/workflows/: deploy.yml  desktop.yml  discord-announce.yml
assets/: App.vue  app.js  router.js
assets/plugins/: api.js  datetime.js  filters.js  storage.js  vuetify.js
assets/views/: Home.vue
cmd/backtest/: main.go
cmd/collector/: main.go
cmd/migrate/: main.go  (+2 more)
config/: bundles.php  routes.yaml  services.yaml
data/: .gitignore  gem-icon-urls.json
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: capture.rs  fingerprint.rs  font_parser.rs  gem_matcher.rs  lab_navigation.rs  lab_state.rs  lib.rs  log_watcher.rs  main.rs  ocr.rs  settings.rs
desktop/src-tauri/src/trade/: client.rs  mod.rs  query.rs  rate_limiter.rs  signals.rs  types.rs
docs/: FRONTEND-DESIGN.md  OVERLAY-GUIDE.md  PLAN-live-dashboard.md  RESEARCH-poe-trade-api.md  content_api_reference.txt  content_intro.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
templates/: base.html.twig  vue.html.twig
(+443 files in other folders)
