[package]
name = "profitofexile-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
strsim = "0.11"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
image = "0.25"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
] }
xcap = "0.0.13"
