[package]
name = "profitofexile-desktop"
version = "0.3.3"
edition = "2021"

[[bin]]
name = "ProfitOfExile"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
strsim = "0.11"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
image = "0.25"
anyhow = "1"
rfd = "0.15"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
    "Foundation",
    "Foundation_Collections",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
] }
xcap = "0.0.13"
